--- a/index.html
+++ b/index.html
@@ -1,2 +1,20 @@
-Verben
+<html>
+<META HTTP-EQUIV="content-type" CONTENT="text/html; charset=utf-8">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,300italic,700,700italic">
+<link rel="stylesheet" href="app.css">
+<body>
+<div class="container">
+    <h1>verben.ninja</h1>
+    <p>Deutsche unregelmäßige Verben lernen</p>
+
+    <div id="myApp"></div>
+</div>
+</body>
+
+<script src="app.js"></script>
+<script>
+    var node = document.getElementById('myApp');
+    var app = Elm.App.embed(node);
+</script>
+</html>
 
